# django-upload-static-to-gcs

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/cloud_storage/: forms.py  models.py  urls.py  views.py
project/cloud_storage/migrations/: 0001_initial.py
project/cloud_storage/templates/photos_cloud/: base.html  index.html
project/local_storage/: admin.py  forms.py  models.py  urls.py  views.py
project/local_storage/migrations/: 0001_initial.py
project/local_storage/templates/photos/: base.html  index.html
project/project/: settings.py  urls.py
