[tool.poetry]
name = "django-upload-static-to-gcs"
version = "0.1.0"
description = ""
authors = ["hsuanchi <a0025071@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.6"
Pillow = "^8.1.0"
django-storages = "^1.11.1"
google-cloud-storage = "^1.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
